@@ -1,6 +1,9 @@
 CHANGES
 
 Trunk
+	Specifying prefix for http://www.sdml.info/srcML/srcerr automatically turns on debugging
+	same as --debug option.
+
 	Don't include cpp namespace declaration for languages other than C or C++.
 
 	Fix missing markup of exception handling for Java.
